--- a/HTML/events.html
+++ b/HTML/events.html
@@ -20,7 +20,9 @@
     }
 
     .sidenav {
-      background-color: whitesmoke;
+      background-color: #C8A1E0;
+      border-color: #C8A1E0;
+      border-radius: 3px;
       height: 160%;
     }
 
