--- a/HTML/rev_hotel.html
+++ b/HTML/rev_hotel.html
@@ -16,22 +16,24 @@
 </head>
 <style>
   .row.content {
-      height: 400px
+    height: 400px
   }
 
   .sidenav {
-      background-color: white;
-      height: 100%;
+    background-color: #C8A1E0;
+    border-color: #C8A1E0;
+    border-radius: 3px;
+    height: 160%;
   }
 
   @media screen and (max-width: 100px) {
-      .row.content {
-          height: auto;
-      }
+    .row.content {
+      height: auto;
+    }
   }
-</style>
+  </style>
 
-</head>
+
 
 <body>
 <div class="container-fluid">
