--- a/HTML/tourist.html
+++ b/HTML/tourist.html
@@ -18,23 +18,24 @@
     <script src="/Javascript/tourist.js"></script>
 
   
-
-<style>
-  .row.content {
-    height: 400px
-  }
-
-  .sidenav {
-    background-color: white;
-    height: 100%;
-  }
-
-  @media screen and (max-width: 100px) {
-    .row.content {
-      height: auto;
-    }
-  }
-</style>
+    <style>
+      .row.content {
+        height: 400px
+      }
+  
+      .sidenav {
+        background-color: #C8A1E0;
+        border-color: #C8A1E0;
+        border-radius: 3px;
+        height: 160%;
+      }
+  
+      @media screen and (max-width: 100px) {
+        .row.content {
+          height: auto;
+        }
+      }
+      </style>
 
 </head>
 
@@ -116,7 +117,10 @@
                     <th>Description</th>
                     <th>Location</th>  
                     <th>Poster</th> 
+                 
                     <th>QR Code</th>   
+                    <th>Rating</th> 
+
 
 
                   </tr>
