--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -11,6 +11,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
 
   <style>
     .row.content {
@@ -18,53 +20,28 @@
     }
 
     .sidenav {
-      background-color: whitesmoke;
+      background-color: #C8A1E0;
+      border-color: #C8A1E0;
+      border-radius: 3px;
       height: 160%;
     }
 
+    .btn-primary {
+      margin-left: 60px; /* Adjust spacing between the dropdown and the button */
+    }
+    #generateReport {
+      margin-left: 10px; /* Adjust spacing between the dropdown and the button */
+    }
+    #mostVisitedChart {
+      width: 100%;
+      max-width: 400px; /* Adjusted to a more reasonable max-width */
+      height: 200px;
+      margin-top: 50px; /* Ensure there's space for the button and dropdown */
+    }
     @media screen and (max-width: 100px) {
       .row.content {
         height: auto;
       }
-    }
-
-    .hamburger-menu {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      cursor: pointer;
-      z-index: 1;
-    }
-
-    .bar {
-      width: 30px;
-  height: 4px;
-  background-color: #333;
-  margin: 6px;
-  transition: 0.4s;
-  margin-left: auto; /* Pushes the bar to the end */
- 
-    }
-
-    .menu-content {
-      display: none;
-      position: absolute;
-      top: 45px;
-      right: 10px;
-      background-color: white;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-    }
-
-    .menu-content a {
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
-
-    .menu-content a:hover {
-      background-color: #ddd;
     }
   </style>
 </head>
@@ -121,100 +98,81 @@
       </div>
 
       <div class="col-sm-9">
-        <!-- <div class="row" id="row-content">
+        <div class="row">
           <div class="column">
             <div class="card">
-              <a href="#sec1">
-                <h4 class="fas fa-users" id="users"></i> Tourist</h4>
-                <p id="userCount">0</p>
-            </div>
-          </div> -->
-<!--           
-          <div class="column">
-            <div class="card">
-              <a href="#sec2">
-                <h4 class="fas fa-user-shield" id="admin"></i> Admin</h4>
-                <p id="adminCount">0</p>
-            </div>
-          </div> -->
-          <div class="row">
-            <div class="column">
-              <div class="card">
-                <a href="#sec3">
-                  <h4 class="fas fa-calendar-alt" id="eventS"></i> Events</h4>
-                  <p id="eventsCount">0</p>
-              </div>
-            </div>
-
-            <div class="column">
-              <div class="card">
-                <a href="#sec4">
-                  <h4 class="fas fa-hotel" id="hOtels"></i> Accomodations</h4>
-                  <p id="hotelCount">0</p>
-              </div>
-            </div>
-            <div class="column">
-              <div class="card">
-                <a href="#sec5">
-                  <h4 class="fas fa-map-marker-alt" id="tourists"></i> Tourist Spots</h4>
-                  <p id="touristCount">0</p>
-              </div>
-            </div>
-
-            <div class="column">
-              <div class="card">
-                <a href="#sec6">
-                  <h4 class="fas fa-utensils" id="resto"></i> Restaurants</h4>
-                  <p id="restoCount">0</p>
-              </div>
-            </div>
-
-            <div class="column">
-              <div class="card">
-                <a href="#sec7">
-                  <h4 class="fas fa-shopping-bag" id="souvenirs"></i> Souvenir Shops</h4>
-                  <p id="souvenirCount">0</p>
-              </div>
-            </div>
-            <!-- <div class="column">
-              <div class="card">
-                <a href="#sec8">
-                  <h4 class="fas fa-chart-bar" id="total"></i> Total Scans</h4>
-                  <p id="totalCount">0</p>
-              </div>
-            </div> -->
-          </div>
-          <div class="col-sm-4">
-            <div class="well" style="position: relative;">
-              <a href="#sec1">
-                <p class="fas fa-users" id="visited"> NUMBER OF TOURISTS</p>
+              <a href="#sec3">
+                <h4 class="fas fa-calendar-alt" id="eventS"> Events</h4>
+                <p id="eventsCount">0</p>
               </a>
-              <div class="hamburger-menu" onclick="toggleMenu()">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-              </div>
-              <div class="menu-content" id="menuContent">
-                <a href="#section1">Daily</a>
-                <a href="#section2">Weekly</a>
-                <a href="#section3">Monthly</a>
-                <a href="#section4">Yearly</a>
-              </div>
-              <canvas id="mostVisitedChart" style="width:200%; max-width:7000px; height:400px"></canvas>
             </div>
           </div>
-          
+
+          <div class="column">
+            <div class="card">
+              <a href="#sec4">
+                <h4 class="fas fa-hotel" id="hOtels"> Accomodations</h4>
+                <p id="hotelCount">0</p>
+              </a>
+            </div>
+          </div>
+          <div class="column">
+            <div class="card">
+              <a href="#sec5">
+                <h4 class="fas fa-map-marker-alt" id="tourists"> Tourist Spots</h4>
+                <p id="touristCount">0</p>
+              </a>
+            </div>
+          </div>
+
+          <div class="column">
+            <div class="card">
+              <a href="#sec6">
+                <h4 class="fas fa-utensils" id="resto"> Restaurants</h4>
+                <p id="restoCount">0</p>
+              </a>
+            </div>
+          </div>
+
+          <div class="column">
+            <div class="card">
+              <a href="#sec7">
+                <h4 class="fas fa-shopping-bag" id="souvenirs"> Souvenir Shops</h4>
+                <p id="souvenirCount">0</p>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="well" style="position: relative;">
+            <a href="#sec1">
+              <p class="fas fa-users" id="visited"> NUMBER OF TOURISTS</p>
+            </a>
+        
+<!-- Bootstrap Dropdown --> 
+  <button class="btn btn-primary" id="generateReport">Generate Report</button>
+<div class="dropdown" style="position: relative; display: inline-block;">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    <i class="fa fa-bars"></i> Monthly
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" id="menuContent">
+    <li><a href="#section1" data-type="Daily">Daily</a></li>
+    <li><a href="#section2" data-type="Weekly">Weekly</a></li>
+    <li><a href="#section3" data-type="Monthly">Monthly</a></li>
+    <li><a href="#section4" data-type="Yearly">Yearly</a></li>
+  </ul>
+
+</div>
+
+
+<canvas id="mostVisitedChart" style="width:100%; max-width:7000px; height:400px"></canvas>
+
+
         <script type="module" src="/Javascript/dash.js"></script>
-        <script>
-          function toggleMenu() {
-            var menuContent = document.getElementById("menuContent");
-            if (menuContent.style.display === "block") {
-              menuContent.style.display = "none";
-            } else {
-              menuContent.style.display = "block";
-            }
-          }
-        </script>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
