--- a/HTML/industries.html
+++ b/HTML/industries.html
@@ -20,8 +20,10 @@
     }
 
     .sidenav {
-      background-color: white;
-      height: 100%;
+      background-color: #C8A1E0;
+      border-color: #C8A1E0;
+      border-radius: 3px;
+      height: 160%;
     }
 
     @media screen and (max-width: 100px) {
@@ -29,8 +31,7 @@
         height: auto;
       }
     }
-  </style>
-
+    </style>
 </head>
 
 <body>
