--- a/HTML/promotion.html
+++ b/HTML/promotion.html
@@ -12,22 +12,24 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
-<style>
-  .row.content {
-    height: 400px
-  }
-
-  .sidenav {
-    background-color: white;
-    height: 100%;
-  }
-
-  @media screen and (max-width: 100px) {
+  <style>
     .row.content {
-      height: auto;
+      height: 400px
     }
-  }
-</style>
+
+    .sidenav {
+      background-color: #C8A1E0;
+      border-color: #C8A1E0;
+      border-radius: 3px;
+      height: 160%;
+    }
+
+    @media screen and (max-width: 100px) {
+      .row.content {
+        height: auto;
+      }
+    }
+    </style>
 </head>
 
 <body>
@@ -86,7 +88,7 @@
               <button class="edit_acc" id="edit_acc"><i class="fas fa-edit"></i> EDIT </button>
               <button id="delete_acc"><i class="fas fa-archive"></i> ARCHIVE </button>
               <div>
-                <button id="archived_acc"><i class="fas fa-box-open"></i> SEE ARCHIVE </button>
+                <button id="promoArchive"><i class="fas fa-box-open"></i> SEE ARCHIVE </button>
               </div>
               
 
