--- a/HTML/restaurants.html
+++ b/HTML/restaurants.html
@@ -13,22 +13,24 @@
   <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-storage.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
-<style>
-  .row.content {
-    height: 400px
-  }
-
-  .sidenav {
-    background-color: white;
-    height: 100%;
-  }
-
-  @media screen and (max-width: 100px) {
+  <style>
     .row.content {
-      height: auto;
+      height: 400px
     }
-  }
-</style>
+
+    .sidenav {
+      background-color: #C8A1E0;
+      border-color: #C8A1E0;
+      border-radius: 3px;
+      height: 160%;
+    }
+
+    @media screen and (max-width: 100px) {
+      .row.content {
+        height: auto;
+      }
+    }
+    </style>
 
 </head>
 
@@ -102,7 +104,7 @@
                       <div class="table-wrapper">
                     
                     <th>Name</th>  
-                    <th>Owner</th> 
+              
                     <th>Type</th> 
                     <th>Contact Number</th>                    
                     <th>Location</th>                 
@@ -143,11 +145,6 @@
             <label for="name">Name</label>
             <input type="text" id="name" name="Name">
 
-            <label for="reg-event">Owner</label>
-            <input type="text" id="owner" name="Owner"></input>
-
-            <label for="reg-event">Type</label>
-            <input type="text" id="type" name="Type"></input>
 
             <label for="confirm">Contact Number</label>
             <input type="tel" id="number" name="Number">
