--- a/HTML/rev_hotel_details.html
+++ b/HTML/rev_hotel_details.html
@@ -15,20 +15,22 @@
     <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
     <style>
         .row.content {
-            height: 400px
+          height: 400px
         }
-
+    
         .sidenav {
-            background-color: white;
-            height: 100%;
+          background-color: #C8A1E0;
+          border-color: #C8A1E0;
+          border-radius: 3px;
+          height: 160%;
         }
-
+    
         @media screen and (max-width: 100px) {
-            .row.content {
-                height: auto;
-            }
+          .row.content {
+            height: auto;
+          }
         }
-    </style>
+        </style>
 
 </head>
 
