--- a/HTML/reviews.html
+++ b/HTML/reviews.html
@@ -12,12 +12,14 @@
   <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-storage.js"></script>
   <style>
     .row.content {
-      height: 400px;
+      height: 400px
     }
 
     .sidenav {
-      background-color: white;
-      height: 100%;
+      background-color: #C8A1E0;
+      border-color: #C8A1E0;
+      border-radius: 3px;
+      height: 160%;
     }
 
     @media screen and (max-width: 100px) {
@@ -25,7 +27,7 @@
         height: auto;
       }
     }
-  </style>
+    </style>
 </head>
 
 <body>
