--- a/HTML/souvenir.html
+++ b/HTML/souvenir.html
@@ -15,22 +15,24 @@
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
   
 
-<style>
-  .row.content {
-    height: 400px
-  }
-
-  .sidenav {
-    background-color: white;
-    height: 100%;
-  }
-
-  @media screen and (max-width: 100px) {
+  <style>
     .row.content {
-      height: auto;
+      height: 400px
     }
-  }
-</style>
+
+    .sidenav {
+      background-color: #C8A1E0;
+      border-color: #C8A1E0;
+      border-radius: 3px;
+      height: 160%;
+    }
+
+    @media screen and (max-width: 100px) {
+      .row.content {
+        height: auto;
+      }
+    }
+    </style>
 </head>
 
 <body>
@@ -104,7 +106,6 @@
                       <div class="table-wrapper">
                
                     <th>Name</th>  
-                    <th>Owner</th> 
                     <th>Contact Number</th> 
                     <th>Location</th>      
                     <th>Poster</th>  
@@ -145,9 +146,6 @@
             <label for="name">Name</label>
             <input type="text" id="name" name="Name">
 
-            <label for="reg-event">Owner</label>
-            <input type="text" id="owner" name="Owner"></input>
-
             <label for="confirm">Contact Number</label>
             <input type="tel" id="number" name="Number">
 
@@ -186,9 +184,6 @@
 
             <label for="name">Name</label>
             <input type="text" id="name1" name="name">
-
-            <label for="reg-event">Owner</label>
-            <input type="text" id="owner1" name="owner"></input>
 
             <label for="confirm">Contact Number</label>
             <input type="tel" id="number1" name="number">
