--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -20,8 +20,8 @@
     }
 
     .sidenav {
-      background-color: #C8A1E0;
-      border-color: #C8A1E0;
+      background-color: gainsboro;
+      border-color: black;
       border-radius: 3px;
       height: 160%;
     }
@@ -150,7 +150,7 @@
             </a>
         
 <!-- Bootstrap Dropdown --> 
-  <button class="btn btn-primary" id="generateReport">Generate Report</button>
+  <button class="btn btn-primary" id="generateReport"> Generate Report</button>
 <div class="dropdown" style="position: relative; display: inline-block;">
   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
     <i class="fa fa-bars"></i> Monthly
