--- a/HTML/tourist.html
+++ b/HTML/tourist.html
@@ -24,8 +24,8 @@
       }
   
       .sidenav {
-        background-color: #C8A1E0;
-        border-color: #C8A1E0;
+        background-color: gainsboro;
+        border-color: gainsboro;
         border-radius: 3px;
         height: 160%;
       }
