--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -36,8 +36,11 @@
       width: 100%;
       max-width: 400px; /* Adjusted to a more reasonable max-width */
       height: 200px;
-      margin-top: 50px; /* Ensure there's space for the button and dropdown */
+      margin-top: 20px; /* Ensure there's space for the button and dropdown */
     }
+    /* Set color for all Font Awesome icons */
+
+
     @media screen and (max-width: 100px) {
       .row.content {
         height: auto;
@@ -146,8 +149,10 @@
         <div class="col-sm-4">
           <div class="well" style="position: relative;">
             <a href="#sec1">
-              <p class="fas fa-users" id="visited"> NUMBER OF TOURISTS</p>
+              <p class="fas fa-check-circle" id="visited"> NUMBER OF TOURISTS </p>
+
             </a>
+            
         
 <!-- Bootstrap Dropdown --> 
   <button class="btn btn-primary" id="generateReport"> Generate Report</button>
