--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -92,11 +92,11 @@
                 <div class="main2">
                     <div class="btn_useracc">
                         <!-- Action buttons for account management -->
-                        <button class="add_acc">Add</button>
-                        <button class="edit_acc disabled-button" id="edit_acc" disabled>Edit</button>
-                        <button id="delete_acc" class="disabled-button" disabled>Archive</button>
+                        <button class="add_acc"><i class="fas fa-plus"></i> Add </button>
+                        <button class="edit_acc disabled-button" id="edit_acc" disabled> <i class="fas fa-edit"></i> Edit</button>
+                        <button id="delete_acc" class="disabled-button" disabled><i class="fas fa-archive"></i> Archive</button>
                         <div>
-                            <button id="archived_acc">See Archives</button>
+                            <button id="archived_acc"> <i class="fas fa-box-open"></i> See Archives</button>
                         </div>
                         <!-- Search input field -->
                         <input type="text" id="srchText" placeholder="Search" onkeyup="searchAppID()">
