--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -24,6 +24,7 @@
       border-color: black;
       border-radius: 3px;
       height: 160%;
+      width: 270px;
     }
 
     .btn-primary {
@@ -64,7 +65,7 @@
           <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Accomodations</a></li>
           <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
           <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
-          <li class="sidebar-list-item1">
+          <!-- <li class="sidebar-list-item1">
             <button class="dropdown-btn"> <i class="fas fa-star"></i> Reviews <i class="fa fa-caret-down"></i></button>
             <div class="dropdown-container">
               <a href="rev_tourist.html">
@@ -88,7 +89,7 @@
                 </div>
               </a>
             </div>
-          </li>
+          </li> -->
           <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
           <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
           <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
