--- a/HTML/dishes.html
+++ b/HTML/dishes.html
@@ -18,12 +18,12 @@
     .row.content {
       height: 400px
     }
-
     .sidenav {
       background-color: gainsboro;
-      border-color: gainsboro;
+      border-color: black;
       border-radius: 3px;
       height: 160%;
+      width: 270px;
     }
 
     @media screen and (max-width: 100px) {
@@ -84,11 +84,11 @@
       <main class="main-container">
         <div class="main2">
           <div class="btn_useracc">
-            <button class="add_acc" id="add_acc"><i class="fas fa-plus"></i> </button>
-            <button class="edit_acc" id="edit_acc"><i class="fas fa-edit"></i> </button>
-            <button id="delete_acc"><i class="fas fa-archive"></i> </button>
+            <button class="add_acc" id="add_acc"><i class="fas fa-plus"></i> Add </button>
+            <button class="edit_acc" id="edit_acc"><i class="fas fa-edit"></i> Edit </button>
+            <button id="delete_acc"><i class="fas fa-archive"></i> Archive </button>
             <div>
-              <button id="archived_acc"><i class="fas fa-box-open"></i> </button>
+              <button id="archived_acc"><i class="fas fa-box-open"></i> See Archive</button>
                 </div>   
 
     
