--- a/HTML/promotion.html
+++ b/HTML/promotion.html
@@ -19,9 +19,10 @@
 
     .sidenav {
       background-color: gainsboro;
-      border-color: gainsboro;
+      border-color: black;
       border-radius: 3px;
       height: 160%;
+      width: 270px;
     }
 
     @media screen and (max-width: 100px) {
