--- a/HTML/dArchives.html
+++ b/HTML/dArchives.html
@@ -19,11 +19,11 @@
 
     .sidenav {
       background-color: gainsboro;
-      border-color: gainsboro;
+      border-color: black;
       border-radius: 3px;
       height: 160%;
+      width: 270px;
     }
-
     @media screen and (max-width: 100px) {
       .row.content {
         height: auto;
