--- a/HTML/events.html
+++ b/HTML/events.html
@@ -21,9 +21,10 @@
 
     .sidenav {
       background-color: gainsboro;
-      border-color: gainsboro;
+      border-color: black;
       border-radius: 3px;
       height: 160%;
+      width: 270px;
     }
 
     @media screen and (max-width: 100px) {
@@ -137,7 +138,7 @@
           <textarea id="description" name="description"></textarea>
 
           <label for="photos">Event Photos</label>
-          <input type="file" id="photos" name="photos" accept="image/png, image/jpeg">
+          <input type="file" id="photos" name="photos" accept="image/png, image/jpeg" multiple>
 
           <input type="submit" id="btnRegister" value="Add Event" />
         </form>
@@ -162,7 +163,7 @@
           <textarea id="description1" name="description1"></textarea>
 
           <label for="photos1">Event Photos</label>
-          <input type="file" id="photos1" name="photos1" accept="image/png, image/jpeg">
+          <input type="file" id="photos1" name="photos1" accept="image/png, image/jpeg" multiple>
 
           <input type="submit" id="btnEdit" value="Save" />
         </form>
