--- a/HTML/pArchives.html
+++ b/HTML/pArchives.html
@@ -14,12 +14,12 @@
     .row.content {
       height: 400px
     }
-
     .sidenav {
       background-color: gainsboro;
-      border-color: gainsboro;
+      border-color: black;
       border-radius: 3px;
       height: 160%;
+      width: 270px;
     }
 
     @media screen and (max-width: 100px) {
