--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -23,11 +23,12 @@
         }
     
         .sidenav {
-          background-color: gainsboro;
-          border-color: gainsboro;
-          border-radius: 3px;
-          height: 160%;
-        }
+      background-color: gainsboro;
+      border-color: black;
+      border-radius: 3px;
+      height: 160%;
+      width: 270px;
+    }
     
         @media screen and (max-width: 100px) {
           .row.content {
