--- a/HTML/tourist.html
+++ b/HTML/tourist.html
@@ -165,7 +165,7 @@
             <input type="text" id="location" name="location">
 
           <label for="confirm"> Photos</label>
-            <input type="file" id="photos" name="photos" accept="image/png, image/jpeg"> 
+            <input type="file" id="photos" name="photos" accept="image/png, image/jpeg" multiple> 
             
 
 
