--- a/HTML/promotion.html
+++ b/HTML/promotion.html
@@ -48,7 +48,7 @@
             <li class="active"><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Accomodations</a></li>
             <li ><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
             <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
-            <li class="sidebar-list-item1">
+            <!-- <li class="sidebar-list-item1">
               <button class="dropdown-btn"> <i class="fas fa-star"></i> Reviews <i class="fa fa-caret-down"></i></button>
               <div class="dropdown-container">
                 <a href="rev_tourist.html">
@@ -73,7 +73,7 @@
                 </a>
               </div>
             </li>
-            
+             -->
             <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
             <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
             <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
