--- a/HTML/events.html
+++ b/HTML/events.html
@@ -51,7 +51,7 @@
           <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Accomodations</a></li>
           <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
           <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
-          <li class="sidebar-list-item1">
+          <!-- <li class="sidebar-list-item1">
             <button class="dropdown-btn">
             <i class="fas fa-star"></i> Reviews
               <i class="fa fa-caret-down" id="icon"></i>
@@ -78,7 +78,7 @@
                 </div>
               </a>
             </div>
-          </li>
+          </li> -->
           
           <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
           <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
@@ -138,7 +138,7 @@
           <textarea id="description" name="description"></textarea>
 
           <label for="photos">Event Photos</label>
-          <input type="file" id="photos" name="photos" accept="image/png, image/jpeg" multiple>
+          <input type="file" id="photos" name="photos" accept="image/png, image/jpeg" >
 
           <input type="submit" id="btnRegister" value="Add Event" />
         </form>
@@ -163,7 +163,7 @@
           <textarea id="description1" name="description1"></textarea>
 
           <label for="photos1">Event Photos</label>
-          <input type="file" id="photos1" name="photos1" accept="image/png, image/jpeg" multiple>
+          <input type="file" id="photos1" name="photos1" accept="image/png, image/jpeg" >
 
           <input type="submit" id="btnEdit" value="Save" />
         </form>
