--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -12,6 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 
   <style>
@@ -24,7 +25,7 @@
       border-color: black;
       border-radius: 3px;
       height: 160%;
-      width: 270px;
+      width: 260px;
     }
 
     .btn-primary {
