--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -13,6 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 
   <style>
@@ -173,7 +174,9 @@
 </div>
 
 
-<canvas id="mostVisitedChart" style="width:100%; max-width:7000px; height:400px"></canvas>
+<canvas id="mostVisitedChart" style="width:100%; max-width:7000px; height:400px;"></canvas>
+
+<canvas id="touristSpotsChart" style="width:100%; max-width:7000px; height:400px; margin-top:20px;"></canvas>
 
 
         <script type="module" src="/Javascript/dash.js"></script>
