--- a/HTML/archives.html
+++ b/HTML/archives.html
@@ -88,9 +88,9 @@
 
           <div class="main2">
             <div class="btn_useracc">
-              <button id="bck"><i class="fas fa-arrow-left"></i> </button>
-              <button class="enable_acc" id="enabled"><i class="fas fa-undo"></i> </button>
-              <button class="enable_acc" id="permanentlyDelete"><i class="fas fa-trash-alt"></i></button>
+              <button id="bck"><i class="fas fa-arrow-left"> BACK </i> </button>
+              <button class="enable_acc" id="enabled"><i class="fas fa-undo"> RETRIEVE </i> </button>
+              <button class="enable_acc" id="permanentlyDelete"><i class="fas fa-trash-alt"> DELETE</i></button>
               
             </div>
 
