--- a/HTML/prArchives.html
+++ b/HTML/prArchives.html
@@ -83,8 +83,8 @@
         <div class="main2">
           <div class="btn_useracc">
             <button id="bckbtn">Back</button>
-            <button class="enable_acc" id="enabledbtn">Retrieve Event</button>
-            <button class="enable_acc" id="permanentlyDelete">Permanently Delete</button>
+            <button class="enable_acc" id="enabledbtn">Retrieve</button>
+            <button class="enable_acc" id="permanentlyDelete"> Delete</button>
             <div>
               <input type="text" id="srchText" placeholder="Search" onkeyup="searchAppID()">
             </div>
