--- a/HTML/tArchives.html
+++ b/HTML/tArchives.html
@@ -70,9 +70,9 @@
 
           <div class="main2">
             <div class="btn_useracc">
-              <button id="bckbtn"><i class="fas fa-arrow-left"></i> </button>
-              <button class="enable_acc" id="enabledTourist"><i class="fas fa-undo"></i> </button>
-              <button class="enable_acc" id="permanentlyDelete"><i class="fas fa-trash-alt"></i></button>
+              <button id="bckbtn"><i class="fas fa-arrow-left"></i> BACK </button>
+              <button class="enable_acc" id="enabledTourist"><i class="fas fa-undo"></i> RETRIEVE </button>
+              <button class="enable_acc" id="permanentlyDelete"><i class="fas fa-trash-alt"></i> DELETE </button>
           
             </div>
 
