--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -42,7 +42,12 @@
       margin-top: 20px; /* Ensure there's space for the button and dropdown */
     }
     /* Set color for all Font Awesome icons */
-
+#touristSpotsChart{
+  width: 100%;
+      max-width: 400px; /* Adjusted to a more reasonable max-width */
+      height: 200px;
+      margin-top: 20px; /* Ensure there's space for the button and dropdown */
+}
 
     @media screen and (max-width: 100px) {
       .row.content {
@@ -176,7 +181,7 @@
 
 <canvas id="mostVisitedChart" style="width:100%; max-width:7000px; height:400px;"></canvas>
 
-<canvas id="touristSpotsChart" style="width:100%; max-width:7000px; height:400px; margin-top:20px;"></canvas>
+<canvas id="touristSpotsChart" style="width:100%; max-width:7000px; height:400px; margin-top:80px;"></canvas>
 
 
         <script type="module" src="/Javascript/dash.js"></script>
