--- a/HTML/iArchives.html
+++ b/HTML/iArchives.html
@@ -16,13 +16,39 @@
       height: 400px
     }
 
-    .sidenav {
-      background-color: gainsboro;
-      border-color: black;
-      border-radius: 3px;
-      height: 160%;
-      width: 260px;
-    }
+ /* Container and sidebar styling */
+ .container-fluid {
+    display: flex;
+  }
+
+  .sidenav {
+    background-color: gainsboro;
+    border-color: black;
+    border-radius: 3px;
+    height: 100vh; /* Full height of viewport */
+    width: 260px;
+    position: fixed;
+  }
+
+  .main-container {
+    margin-left: 245px; /* Offset main content for sidebar width */
+    padding: 15px;
+    width: calc(100% - 240  px);
+  }
+
+  /* Table wrapper styling */
+  .outer-wrapper {
+    max-height: 500px; /* Set a max-height */
+    overflow-y: auto; /* Enable vertical scrolling */
+    background-color: white;
+   
+  }
+
+  /* Adjust the table to fit within the wrapper */
+  .table {
+    width: 100%;
+    table-layout: fixed;
+  }
 
     @media screen and (max-width: 100px) {
       .row.content {
