--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -105,6 +105,15 @@
       </div>
 
       <div>
+        <div id="logoutModal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Confirm for Logout</h2>
+            <p>Are you sure you want to log out?</p>
+            <button id="confirmLogout">Yes, log out</button>
+            <button id="cancelLogout">Cancel</button>
+          </div>
+        </div>
         <p class="font-weight-bold" id="dash_label"> DASHBOARD</p>
       </div>
 
@@ -182,6 +191,8 @@
 <canvas id="mostVisitedChart" style="width:100%; max-width:7000px; height:400px;"></canvas>
 
 <canvas id="touristSpotsChart" style="width:100%; max-width:7000px; height:400px; margin-top:80px;"></canvas>
+
+
 
 
         <script type="module" src="/Javascript/dash.js"></script>
