--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -108,12 +108,14 @@
         <div id="logoutModal" class="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
-            <h2>Confirm for Logout</h2>
-            <p>Are you sure you want to log out?</p>
+            <h2>Are you sure you want to log out?</h2>
+           
             <button id="confirmLogout">Yes, log out</button>
             <button id="cancelLogout">Cancel</button>
           </div>
         </div>
+
+        
         <p class="font-weight-bold" id="dash_label"> DASHBOARD</p>
       </div>
 
