--- a/HTML/iArchives.html
+++ b/HTML/iArchives.html
@@ -109,6 +109,17 @@
         </ul><br>
       </div>
 
+  
+      <div>
+        <div id="logoutModal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Are you sure you want to log out?</h2>
+           
+            <button id="confirmLogout">Yes, log out</button>
+            <button id="cancelLogout">Cancel</button>
+          </div>
+        </div>
 
         <main class="main-container"  id="blur">
 
@@ -116,7 +127,7 @@
             <div class="btn_useracc">
               <button id="bck"><i class="fas fa-arrow-left"></i> BACK </button>
               <button class="enable_acc" id="enabled"><i class="fas fa-undo"></i> RETRIEVE </button>
-              <button class="enable_acc" id="permanentlyDelete"><i class="fas fa-trash-alt"></i> DELETE </button>
+              <!-- <button class="enable_acc" id="permanentlyDelete"><i class="fas fa-trash-alt"></i> DELETE </button> -->
               
             </div>
 
