--- a/HTML/otop.html
+++ b/HTML/otop.html
@@ -106,6 +106,18 @@
           <li><a href="#section11" id="logout"><i class="fas fa-sign-out-alt"></i> Log out</a></li>
         </ul><br>
       </div>
+    
+      <div>
+        <div id="logoutModal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Are you sure you want to log out?</h2>
+           
+            <button id="confirmLogout">Yes, log out</button>
+            <button id="cancelLogout">Cancel</button>
+          </div>
+        </div>
+
       <main class="main-container">
         <div class="main2">
           <div class="btn_useracc">
