--- a/HTML/prArchives.html
+++ b/HTML/prArchives.html
@@ -105,6 +105,18 @@
         <br>
       </div>
 
+      <div>
+        <div id="logoutModal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Are you sure you want to log out?</h2>
+           
+            <button id="confirmLogout">Yes, log out</button>
+            <button id="cancelLogout">Cancel</button>
+          </div>
+        </div>
+    
+
       <main class="main-container" id="blur">
         <div class="main2">
           <div class="btn_useracc">
