--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -113,7 +113,17 @@
                     <li><a href="#section11" id="logout"><i class="fas fa-sign-out-alt"></i> Log out</a></li>
                 </ul><br>
             </div>
-
+            <div>
+              <div id="logoutModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <h2>Are you sure you want to log out?</h2>
+                 
+                  <button id="confirmLogout">Yes, log out</button>
+                  <button id="cancelLogout">Cancel</button>
+                </div>
+              </div>
+        
             <!-- Main content area -->
             <main class="main-container">
                 <div class="main2">
