--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -69,7 +69,7 @@
           <li><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
           <li><a href="#section12" id="events"><i class="fas fa-calendar-alt"></i> Events</a></li>
           <li><a href="#section13" id="tourist"><i class="fas fa-map-marked"></i> Tourist Spots</a></li>
-          <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Accomodations</a></li>
+          <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
           <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
           <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
           <!-- <li class="sidebar-list-item1">
@@ -192,6 +192,21 @@
 
 <canvas id="mostVisitedChart" style="width:100%; max-width:7000px; height:400px;"></canvas>
 
+<!-- 
+<button class="btn btn-primary" id="generateReport2"> Generate Report</button>
+<div class="dropdown" style="position: relative; display: inline-block;">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    <i class="fa fa-bars"></i> Monthly
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" id="menuContentTouristSpots">
+    <li><a href="#section1" data-type="Daily">Daily</a></li>
+    <li><a href="#section2" data-type="Weekly">Weekly</a></li>
+    <li><a href="#section3" data-type="Monthly">Monthly</a></li>
+    <li><a href="#section4" data-type="Yearly">Yearly</a></li>
+  </ul>
+
+</div> -->
 <canvas id="touristSpotsChart" style="width:100%; max-width:7000px; height:400px; margin-top:80px;"></canvas>
 
 
