--- a/HTML/industries.html
+++ b/HTML/industries.html
@@ -73,7 +73,7 @@
           <li><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
           <li><a href="#section12" id="events"><i class="fas fa-calendar-alt"></i> Events</a></li>
           <li><a href="#section13" id="tourist"><i class="fas fa-map-marked"></i> Tourist Spots</a></li>
-          <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Accomodations</a></li>
+          <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
           <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
           <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
           <!-- <li class="sidebar-list-item1">
@@ -165,7 +165,7 @@
           <label for="photos"> Photos</label>
           <input type="file" id="photos" name="photos" accept="image/png, image/jpeg">
 
-          <input type="submit" id="btnRegister" value="Add Local Dishes" />
+          <input type="submit" id="btnRegister" value="Add Local Industries" />
         </form>
         
       </div>
