--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -77,7 +77,7 @@
                     <li class="active"><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
                     <li><a href="#section12" id="events"><i class="fas fa-calendar-alt"></i> Events</a></li>
                     <li><a href="#section13" id="tourist"><i class="fas fa-map-marked"></i> Tourist Spots</a></li>
-                    <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Accomodations</a></li>
+                    <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
                     <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
                     <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
                     <!-- <li class="sidebar-list-item1">
@@ -114,6 +114,17 @@
                 </ul><br>
             </div>
 
+            <div>
+              <div id="logoutModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <h2>Are you sure you want to log out?</h2>
+                
+                  <button id="confirmLogout">Yes, log out</button>
+                  <button id="cancelLogout">Cancel</button>
+                </div>
+              </div>
+              
             <!-- Main content area -->
             <main class="main-container">
                 <div class="main2">
