--- a/HTML/tourist.html
+++ b/HTML/tourist.html
@@ -288,6 +288,15 @@
       </div>
   </div>
 
+  <div id="reviews-modal" class="modal">
+    <div class="modal-content">
+      <span class="close-reviews">&times;</span>
+      <h3>Reviews for the Establishment</h3>
+      <div class="reviews-container"></div> <!-- Reviews will be dynamically added here -->
+    </div>
+  </div>
+  
+
   
   
     <script>
