--- a/HTML/events.html
+++ b/HTML/events.html
@@ -169,7 +169,7 @@
           <input type="text" id="name" name="name">
 
           <label for="reg-date">Event Date</label>
-          <input type="date" id="caldate" name="date">
+          <input type="date" id="caldate" name="caldate">
 
           <label for="reg-event">Event Description</label>
           <textarea id="description" name="description"></textarea>
