--- a/HTML/promotion.html
+++ b/HTML/promotion.html
@@ -144,7 +144,7 @@
                     <th>Name</th>
                     <th>Details</th>
                    <th>QR Code</th>   
-                    
+                   <th>Rating</th> 
                    
 
                   </tr>
@@ -295,10 +295,10 @@
       <div class="details-modal-content">
           <span class="details-close">&times;</span>
           <h3 id="details-title">Tourist Spot Details</h3>
-          <p><strong>Name:</strong> <span id="details-name"></span></p>
-          <p><strong>Number:</strong> <span id="details-number"></span></p>
-          <p><strong>Email:</strong> <span id="details-email"></span></p>
-          <p><strong>Address:</strong> <span id="details-address"></span></p>
+          <p><strong style="color: white;">Name:</strong> <span id="details-name"  style="color: white;"></span></p>
+          <p><strong style="color: white;">Number:</strong> <span id="details-number"  style="color: white;"></span></p>
+          <p><strong style="color: white;">Email:</strong> <span id="details-email"  style="color: white;"></span></p>
+          <p><strong style="color: white;">Address:</strong> <span id="details-address"  style="color: white;"></span></p>
           <img id="details-photo" src="" alt="Establishment Photo" style="width: 250PX; height: 250PX;">
       </div>
   </div>
