--- a/HTML/souvenir.html
+++ b/HTML/souvenir.html
@@ -146,6 +146,7 @@
                     <th>Name</th>  
                     <th>Details</th> 
                     <th>Qr Code</th>  
+                    <th>Rating</th> 
 
                   </tr>
                   <tbody id="tbody1"></tbody>
@@ -271,9 +272,10 @@
       <div class="details-modal-content">
           <span class="details-close">&times;</span>
           <h3 id="details-title">Souvenir Shop Details</h3>
-          <p><strong>Name:</strong> <span id="details-name"></span></p>
-          <p><strong>Number:</strong> <span id="details-number"></span></p>
-          <p><strong>Location:</strong> <span id="details-location"></span></p>
+          <p><strong style="color: white;">Name:</strong> <span id="details-name" style="color: white;"></span></p>
+          <p><strong style="color: white;">Number:</strong> <span id="details-number" style="color: white;"></span></p>
+          <p><strong style="color: white;">Location:</strong> <span id="details-location" style="color: white;"></span></p>
+          
           <img id="details-photo" src="" alt="Establishment Photo" style="width: 250PX; height: 250PX;">
       </div>
   </div>
