--- a/HTML/tourist.html
+++ b/HTML/tourist.html
@@ -281,22 +281,27 @@
       <div class="details-modal-content">
           <span class="details-close">&times;</span>
           <h3 id="details-title">Tourist Spot Details</h3>
-          <p><strong>Name:</strong> <span id="details-name"></span></p>
-          <p><strong>Description:</strong> <span id="details-description"></span></p>
-          <p><strong>Location:</strong> <span id="details-location"></span></p>
+          <p><strong style="color: white;">Name:</strong> <span id="details-name" style="color: white;"></span></p>
+          <p><strong style="color: white;">Description:</strong> <span id="details-description" style="color: white;"></span></p>
+          <p><strong style="color: white;">Location:</strong> <span id="details-location" style="color: white;"></span></p>
+          
           <img id="details-photo" src="" alt="Establishment Photo" style="width: 250PX; height: 250PX;">
       </div>
   </div>
 
-  <div id="reviews-modal" class="modal">
-    <div class="modal-content">
-      <span class="close-reviews">&times;</span>
-      <h3>Reviews for the Establishment</h3>
-      <div class="reviews-container"></div> <!-- Reviews will be dynamically added here -->
-    </div>
+
+  <button id="see-reviews-btn">See Reviews</button>
+  <div id="reviews-modal" class="modalRev">
+      <div class="modal-contentRev">
+          <span id="close-modal" class="close">&times;</span>
+          <h3>Reviews</h3>
+          <!-- <p><strong>Name:</strong> <span id="details-name"></span></p>
+          <p><strong>Average Rating:</strong> <span id="details-rate"></span></p>
+          <p><strong>Total Reviews:</strong> <span id="details-name"></span></p> -->
+          <div id="reviews-container"></div>
+      </div>
   </div>
   
-
   
   
     <script>
