--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -25,8 +25,7 @@
       background-color: gainsboro;
       border-color: black;
       border-radius: 3px;
-      height: 160%;
-      
+      height: 100vh; /* Full height of viewport */
       width: 260px;
     }
 
@@ -50,7 +49,7 @@
       margin-top: 20px; /* Ensure there's space for the button and dropdown */
 }
 
-    @media screen and (max-width: 100px) {
+    @media screen and (max-width: 1000px) {
       .row.content {
         height: auto;
       }
@@ -63,7 +62,7 @@
   <div class="container-fluid">
     <div class="row content">
       <div class="col-sm-3 sidenav hidden-xs">
-        <h2 id="dash-logo"><img src="/image/456694310_1626575664570417_5117239041912524083_n.png" alt="index" width="60" height="50" class="center-image">
+        <h2 id="dash-logo"><img src="/image/logo-vigan-removebg-preview.png" alt="index" width="55" height="55" class="center-image">
           ePasyar</h2>
         <ul class="nav nav-pills nav-stacked">
           <li class="active"><a href="#section1" id="dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
