--- a/HTML/dishes.html
+++ b/HTML/dishes.html
@@ -64,7 +64,7 @@
   <div class="container-fluid">
     <div class="row content">
       <div class="col-sm-3 sidenav hidden-xs">
-        <h2 id="dash-logo"><img src="/image/456694310_1626575664570417_5117239041912524083_n.png" alt="index" width="60" height="50" class="center-image">
+        <h2 id="dash-logo"><img src="/image/logo-vigan-removebg-preview.png" alt="index" width="55" height="55" class="center-image">
           ePasyar</h2>
         <ul class="nav nav-pills nav-stacked">
 
@@ -224,7 +224,7 @@
   <div id="details-modal" class="details-modal">
     <div class="details-modal-content">
         <span class="details-close">&times;</span>
-        <h3 id="details-title">OTOP Details</h3>
+        <h3 id="details-title">Local Dishes Details</h3>
         <p><strong style="color: white;">Name:</strong> <span id="details-name" style="color: white;"></span></p>
                <p><strong style="color: white;">Description:</strong> <span id="details-description" style="color: white;"></span></p>
        
