--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -68,10 +68,8 @@
         <div class="row content">
             <!-- Sidebar navigation -->
             <div class="col-sm-3 sidenav hidden-xs">
-                <h2 id="dash-logo">
-                    <img src="/image/456694310_1626575664570417_5117239041912524083_n.png" alt="index" width="60" height="50" class="center-image"> 
-                    ePasyar
-                </h2>
+              <h2 id="dash-logo"><img src="/image/logo-vigan-removebg-preview.png" alt="index" width="55" height="55" class="center-image">
+                ePasyar</h2>
                 <ul class="nav nav-pills nav-stacked">
                     <li><a href="#section1" id="dash"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
                     <li class="active"><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
