--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -53,6 +53,30 @@
       margin-top: 20px; /* Ensure there's space for the button and dropdown */
 }
 
+button#generatePDF, button#generateExcel {
+    background-color: #337ab7;
+    color: white;
+    border: none;
+    font-size: 12px;
+    padding: 10px 20px;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+button#dropdownMenu{
+  background-color: white;
+    color: white;
+    border: none;
+    font-size: 12px;
+    padding: 10px 20px;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+  button#generatePDF:hover, button#generateExcel:hover {
+    background-color: #286090; /* Darker shade on hover */
+  }
+
     @media screen and (max-width: 1000px) {
       .row.content {
         height: auto;
