--- a/HTML/index.html
+++ b/HTML/index.html
@@ -74,11 +74,15 @@
     
         <label for="email">Email</label>
         <input type="text" id="email" name="email" required>
-        <label for="password">Password</label>
+        <label for="password">Password</label
+          >
+          
         <div class="password-container">
             <input type="password" id="password" name="password" required>
             <i class="fas fa-eye toggle-password" id="togglePassword"></i>
         </div>
+        <label for="password-hint" style="color: yellow; font-size: 12px;">Password Hint: ADMIN_EMPLOYEE NUMBER(6 CHARACTERS)</label>
+
         <div id="forgotPass" style="cursor: pointer;">
           <p>Forgot Password</p>
       </div>
