--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -143,7 +143,8 @@
                         <div class="table-wrapper">
                             <table id="table" class="table" style="width:100%">
                                 <tr>
-                                    <th>Name</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
                                     <th>Email</th>
                                     <th>Position</th>
                                     <th>Status</th>
@@ -163,8 +164,10 @@
                 <span class="close-modal">&times;</span>
                 <h1 id="create-txt">Create an Account</h1>
                 <form id="create-form">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name">
+                  <label for="fname">First Name</label>
+                  <input type="text" id="fname" name="fname">
+                  <label for="lname">Last Name</label>
+                  <input type="text" id="lname" name="lname">
                     <label for="name">Employee Number</label>
                     <input type="text" id="em_no" name="em_no">
                     <label for="reg-email">Email</label>
@@ -186,8 +189,10 @@
                 <span class="close-modal-edit">&times;</span>
                 <h1 id="edit-txt">Edit an Account</h1>
                 <form id="edit-form">
-                    <label for="name">Name</label>
-                    <input type="text" id="name1" name="name">
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname1" name="fname1">
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname1" name="lname1">
                     <label for="name">Employee Number</label>
                     <input type="text" id="em_no1" name="em_no">
                     <label for="edit-email">Email</label>
