--- a/HTML/index.html
+++ b/HTML/index.html
@@ -81,9 +81,9 @@
             <input type="password" id="password" name="password" required>
             <i class="fas fa-eye toggle-password" id="togglePassword"></i>
         </div>
-        <label for="password-hint" style="color: yellow; font-size: 12px;">Password Hint: ADMIN_EMPLOYEE NUMBER(6 CHARACTERS)</label>
+        <!-- <label for="password-hint" style="color: yellow; font-size: 12px;">Password Hint: ADMIN_EMPLOYEE NUMBER(6 CHARACTERS)</label> -->
 
-        <div id="forgotPass" style="cursor: pointer;">
+        <div id="forgot-password-btn" style="cursor: pointer;">
           <p>Forgot Password</p>
       </div>
       
