--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -31,9 +31,7 @@
     background-color: gainsboro;
     border-color: black;
     border-radius: 3px;
-    height: 100vh; /* Full height of viewport */
-    width: 260px;
-    position: fixed;
+    height: 115vh;    width: 260px;
   }
 
   .main-container {
@@ -107,7 +105,8 @@
                     <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
                     <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
                     <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
-                    
+                    <li><a href="#section45" id="activities"><i class="fas fa-tasks"></i> Activities</a></li>
+                    <li><a href="#section45" id="user"><i class="fas fa-user-clock"></i> User Log</a></li>  
                     <li><a href="#section11" id="logout"><i class="fas fa-sign-out-alt"></i> Log out</a></li>
                 </ul><br>
             </div>
@@ -130,7 +129,7 @@
                         <!-- Action buttons for account management -->
                         <button class="add_acc"><i class="fas fa-plus"></i> Add </button>
                         <button class="edit_acc disabled-button" id="edit_acc" disabled> <i class="fas fa-edit"></i> Edit</button>
-                        <button id="delete_acc" class="disabled-button" disabled><i class="fas fa-archive"></i> Delete</button>
+                        <button id="delete_acc" class="disabled-button" disabled><i class="fas fa-archive"></i> Archive</button>
                         <div>
                             <button id="archived_acc"> <i class="fas fa-box-open"></i> See Archives</button>
                         </div>
@@ -220,7 +219,7 @@
 
         <!-- confirmation modal for delete account -->
         <div class="cnfrm_modal_delete" id="delete_acc_modal">
-          <h1>Are you sure you want to archive this Event?</h1>
+          <h1>Are you sure you want to archive this account?</h1>
           <div class="btn1">
             <button id="cnl2">Cancel</button>
             <button id="cnfrm2">Confirm</button>
