--- a/HTML/rArchives.html
+++ b/HTML/rArchives.html
@@ -23,9 +23,7 @@
     background-color: gainsboro;
     border-color: black;
     border-radius: 3px;
-    height: 100vh; /* Full height of viewport */
-    width: 260px;
-    position: fixed;
+    height: 115vh;    width: 260px;
   }
 
   .main-container {
@@ -84,6 +82,8 @@
             <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
             <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
             <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
+            <li><a href="#section45" id="activities"><i class="fas fa-tasks"></i> Activities</a></li>
+            <li><a href="#section45" id="user"><i class="fas fa-user-clock"></i> User Log</a></li>  
             <li><a href="#section11" id="logout"><i class="fas fa-sign-out-alt"></i> Log out</a></li>
 
           </ul><br>
@@ -138,7 +138,7 @@
 
  <!-- confirmation modal for enable account -->
  <div class="cnfrm_modal" id="cnfrm_modal_enable">
-  <h1>Enable Restaurant?</h1>
+  <h1>Are you sure you want to Enable Restaurant?</h1>
       <div class="btn">
           <button id="cnl">Cancel</button>
           <button id="cnfrm">Confirm</button>
@@ -146,7 +146,7 @@
 </div>
 
 <div class="cnfrm_modal" id="cnfrm_modal_delete">
-  <h1>Permanently Delete Event?</h1>
+  <h1>Are you sure you want to Permanently Delete Restaurant?</h1>
   <div class="btn">
     <button id="cnl_delete">Cancel</button>
     <button id="cnfrm_delete">Confirm</button>
