--- a/HTML/restaurants.html
+++ b/HTML/restaurants.html
@@ -27,9 +27,7 @@
     background-color: gainsboro;
     border-color: black;
     border-radius: 3px;
-    height: 100vh; /* Full height of viewport */
-    width: 260px;
-    position: fixed;
+    height: 115vh;    width: 260px;
   }
 
   .main-container {
@@ -103,6 +101,8 @@
             <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
             <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
             <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
+            <li><a href="#section45" id="activities"><i class="fas fa-tasks"></i> Activities</a></li>
+            <li><a href="#section45" id="user"><i class="fas fa-user-clock"></i> User Log</a></li>  
             <li><a href="#section11" id="logout"><i class="fas fa-sign-out-alt"></i> Log out</a></li>
 
           </ul><br>
@@ -245,7 +245,7 @@
 
        <!-- confirmation modal for add account -->
        <div class="cnfrm_modal_add" id="cnfrm_add">
-        <h1>Add Restaurant Information?</h1>
+        <h1>Are you sure you want to Add Restaurant Information?</h1>
             <div class="btn1">
                 <button id="cnl3" class="cnl">Cancel</button>
                 <button id="cnfrm3">Confirm</button>
@@ -254,7 +254,7 @@
 
        <!-- confirmation modal for edit account -->
        <div class="cnfrm_modal" id="cnfrm_edit">
-        <h1>Update Restaurant Information?</h1>
+        <h1>Are you sure you want to Update Restaurant Information?</h1>
             <div class="btn1">
                 <button id="cnl" class="cnl">Cancel</button>
                 <button id="cnfrm">Confirm</button>
