--- a/HTML/prArchives.html
+++ b/HTML/prArchives.html
@@ -119,7 +119,8 @@
               <table id="table" class="table" style="width:100%">
                 <tr>
                   <th>Archived By</th>
-                  <th>Name</th>
+                  <th>First Name</th>
+                  <th>Last Name</th>
                   <th>Email</th>
                   <th>Archived Date</th>
                 </tr>
