--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -145,7 +145,7 @@
                                     <th>First Name</th>
                                     <th>Last Name</th>
                                     <th>Email</th>
-                                    <th>Position</th>
+                                    <!-- <th>Position</th> -->
                                     <th>Status</th>
                                     
                                 </tr>
@@ -171,12 +171,12 @@
                     <input type="text" id="em_no" name="em_no">
                     <label for="reg-email">Email</label>
                     <input type="text" id="email" name="email">
-                    <label for="position">Position</label>
-                    <select name="position" id="position">
+                    <!-- <label for="position">Position</label> -->
+                    <!-- <select name="position" id="position">
                         <option> </option>
                         <option> System Administrator</option>
                         <option> Statistician</option>
-                    </select>
+                    </select> -->
                     <input type="button" id="btnRegister" value="Register" />
                 </form>
             </div>
@@ -196,12 +196,12 @@
                     <input type="text" id="em_no1" name="em_no">
                     <label for="edit-email">Email</label>
                     <input type="text" id="email1" name="email">
-                    <label for="position">Position</label>
-                    <select name="position" id="positionEdit">
+                    <!-- <label for="position">Position</label> -->
+                    <!-- <select name="position" id="positionEdit">
                         <option> </option>
                         <option> System Administrator</option>
                         <option> Statistician</option>
-                    </select>
+                    </select> -->
                     <input type="button" id="btnSaveEdit" value="Save">
                 </form>
             </div>
