--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -16,6 +16,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.1/xlsx.full.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.14/jspdf.plugin.autotable.min.js"></script>
+
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -229,10 +232,10 @@ button#dropdownMenu{
 
             </a>
 
-            <button id="generatePDF" style="background-color: #337ab7; color: white; border: none; padding: 5px 10px; border-radius: 5px; cursor: pointer;">
+            <button id="generatePDFScan" style="background-color: #337ab7; color: white; border: none; padding: 5px 10px; border-radius: 5px; font-size: 12px;  cursor: pointer;">
               Generate PDF Report
             </button>
-            <button id="generateExcel" style="background-color: #337ab7; color: white; border: none; padding: 5px 10px; border-radius: 5px; cursor: pointer;">
+            <button id="generateExcelScan" style="background-color: #337ab7; color: white; border: none; padding: 5px 10px; border-radius: 5px; font-size: 12px; cursor: pointer;">
               Generate Excel Report
             </button>
   
