--- a/HTML/industries.html
+++ b/HTML/industries.html
@@ -226,7 +226,7 @@
   <div id="details-modal" class="details-modal">
     <div class="details-modal-content">
         <span class="details-close">&times;</span>
-        <h3 id="details-title">OTOP Details</h3>
+        <h3 id="details-title">Local Industries Details</h3>
         <p><strong style="color: white;">Name:</strong> <span id="details-name" style="color: white;"></span></p>
                <p><strong style="color: white;">Description:</strong> <span id="details-description" style="color: white;"></span></p>
        
