--- a/HTML/index.html
+++ b/HTML/index.html
@@ -89,7 +89,7 @@
             type="password" 
             id="password" 
             name="password" 
-            placeholder="lastname_employeeNumber" 
+            placeholder="Password" 
             required>
           <i class="fas fa-eye toggle-password" id="togglePassword"></i>
         </div>
@@ -122,9 +122,20 @@
     </div>
   </div>
        
+<!-- Error Modal -->
+<div id="errorModal" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px; color: white; max-width: 400px; width: 100%;">
+  <div style="padding: 20px; background-color: #333; border-radius: 10px;">
+    <p id="errorMessage" style="font-size: 16px; margin: 0;"></p>
+    <button id="closeBtn" style="margin-top: 20px; padding: 10px 20px; background-color: red; color: white; border: none; border-radius: 5px;">Close</button>
+  </div>
+</div>
 
-
- 
+<div id="errorModal1" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px; color: white; max-width: 400px; width: 100%;">
+  <div style="padding: 20px; background-color: #333; border-radius: 10px;">
+    <p id="errorMessage1" style="font-size: 16px; margin: 0;"></p>
+    <button id="closeBtn1" style="margin-top: 20px; padding: 10px 20px; background-color: red; color: white; border: none; border-radius: 5px;">Close</button>
+  </div>
+</div>
 
 
 
