--- a/HTML/restaurants.html
+++ b/HTML/restaurants.html
@@ -116,51 +116,66 @@
   <div class="container-fluid">
     <div class="row content">
       <div class="col-sm-3 sidenav hidden-xs">
-        <h2 id="dash-logo"><img src="/image/logo-vigan-removebg-preview.png" alt="index" width="55" height="55" class="center-image">
-          ePasyar</h2>
+        <h2 id="dash-logo">
+          <img src="/image/logo-vigan-removebg-preview.png" alt="index" width="55" height="55" class="center-image">
+          ePasyar
+        </h2>
         <ul class="nav nav-pills nav-stacked">
-  
-            <li><a href="#section1" id="dash"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-            <li><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
-            <li ><a href="#section12" id="events"><i class="fas fa-calendar-alt"></i> Events</a></li>
-            <li ><a href="#section13" id="tourist"><i class="fas fa-map-marked"></i> Tourist Spots</a></li>
-            <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
-            <li ><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
-            <li class="active"><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
-            <!-- <li class="sidebar-list-item1">
-              <button class="dropdown-btn"> <i class="fas fa-star"></i> Reviews <i class="fa fa-caret-down"></i></button>
-              <div class="dropdown-container">
-                <a href="rev_tourist.html">
-                  <div class="con-lic">
-                    <i class="fas fa-map-marker-alt"> </i> Tourist Spots
-                  </div>
-                </a>
-                <a href="rev_hotel.html">
-                  <div class="con-lic">
-                    <i class="fas fa-hotel"> </i> Hotels
-                  </div>
-                </a>
-                <a href="rev_souvenir.html">
-                  <div class="con-lic">
-                    <i class="fas fa-shopping-bag" > </i> Souvenir Shops
-                  </div>
-                </a>
-                <a href="rev_restaurant.html">
-                  <div class="con-lic">
-                    <i class="fas fa-utensils"></i> Restaurant
-                  </div>
-                </a>
-              </div>
-            </li> -->
-            <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
-            <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
-            <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
-  
- 
-            <li><a href="#section11" id="logout"><i class="fas fa-sign-out-alt"></i> Log out</a></li>
+          <li >
+            <a href="#section1" id="dash">
+              <i class="fas fa-tachometer-alt"></i> Dashboard
+            </a>
+          </li>
+          <li>
+            <a href="#section2" id="profile">
+              <i class="far fa-user"></i> Account Management
+            </a>
+          </li>
+          <li  >
+            <a href="#section12" id="events">
+              <i class="fas fa-calendar-alt"></i> Events
+            </a>
+          </li>
+          <!-- Explore Dropdown -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="fas fa-cogs"></i> Manage <span class="caret" style="margin-left: 47%;"></span>
 
-          </ul><br>
-        </div>
+            </a>
+            <ul class="dropdown-menu">
+              <li ><a href="#section13" id="tourist"><i class="fas fa-map-marked"></i> Tourist Spots</a></li>
+              <li  ><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
+              <li ><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
+              <li class="active"><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
+            </ul>
+          </li>
+          <!-- Local Features Dropdown -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="fas fa-leaf"></i> Local Features <span class="caret" style="margin-left: 21%;"></span>
+
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
+              <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
+              <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#section12" id="reward">
+              <i class="fas fa-gift"></i> Rewards
+            </a>
+          </li>
+          <li>
+            <a href="#section11" id="logout">
+              <i class="fas fa-sign-out-alt"></i> Log out
+            </a>
+          </li>
+        </ul>
+        <br>
+      </div>
+    
+    </div>
 
    
         <div id="logoutModal" class="modal" style="margin-left: 400px; top: 30%; ">
@@ -204,7 +219,7 @@
             </div>
             <div class="outer-wrapper">
               <div class="table-wrapper">
-                <table id="table" class="table" style="width:100%">
+                <table id="table" class="table" style="width:100%; margin-left: 1%;">
                   <tr>
 
              
