--- a/HTML/rev_tourist.html
+++ b/HTML/rev_tourist.html
@@ -156,25 +156,66 @@ margin-top: 5px;
   <div class="container-fluid">
     <div class="row content">
       <div class="col-sm-3 sidenav hidden-xs">
-        <h2 id="dash-logo"><img src="/image/logo-vigan-removebg-preview.png" alt="index" width="55" height="55" class="center-image">
-          ePasyar</h2>
+        <h2 id="dash-logo">
+          <img src="/image/logo-vigan-removebg-preview.png" alt="index" width="55" height="55" class="center-image">
+          ePasyar
+        </h2>
         <ul class="nav nav-pills nav-stacked">
+          <li >
+            <a href="#section1" id="dash">
+              <i class="fas fa-tachometer-alt" style="color: #184267;"></i> Dashboard
+            </a>
+          </li>
+          <li>
+            <a href="#section2" id="profile">
+              <i class="far fa-user" style="color: #184267;"></i> Account Management
+            </a>
+          </li>
+          <li  >
+            <a href="#section12" id="events">
+              <i class="fas fa-calendar-alt" style="color: #184267;"></i> Events
+            </a>
+          </li>
+          <!-- Explore Dropdown -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="fas fa-cogs" style="color: #184267;"></i> Manage <span class="caret" style="margin-left: 47%;"></span>
 
-        
-          <li><a href="#section1" id="dash"><i class="fas fa-tachometer-alt" style="color: #184267;"></i> Dashboard</a></li>
-          <li><a href="#section2" id="profile"><i class="far fa-user" style="color: #184267;"></i> Account Management</a></li>
-          <li><a href="#section12" id="events"><i class="fas fa-calendar-alt" style="color: #184267;"></i> Events</a></li>
-          <li class="active"><a href="#section13" id="tourist"><i class="fas fa-map-marked" style="color: #184267;"></i> Tourist Spots</a></li>
-          <li><a href="#section3" id="promotion"><i class="fas fa-hotel" style="color: #184267;"></i> Hotels</a></li>
-          <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag" style="color: #184267;"></i> Souvenir Shops</a></li>
-          <li><a href="#section4" id="restaurant"><i class="fas fa-utensils" style="color: #184267;"></i> Restaurant</a></li>
-          <li><a href="#section41" id="localdishes"><i class="fas fa-utensils" style="color: #184267;"></i> Local Dishes</a></li>
-          <li><a href="#section44" id="localindustries"><i class="fas fa-industry" style="color: #184267;"></i> Local Industries</a></li>
-          <li><a href="#section42" id="otop"><i class="fas fa-store" style="color: #184267;"></i> OTOP</a></li>
-          <li><a href="#section11" id="logout"><i class="fas fa-sign-out-alt" style="color: #184267;"></i> Log out</a></li>
+            </a>
+            <ul class="dropdown-menu">
+              <li class="active"><a href="#section13" id="tourist"><i class="fas fa-map-marked" style="color: #184267;"></i> Tourist Spots</a></li>
+              <li ><a href="#section3" id="promotion" style="color: #184267;"><i class="fas fa-hotel"></i> Hotels</a></li>
+              <li ><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag" style="color: #184267;"></i> Souvenir Shops</a></li>
+              <li><a href="#section4" id="restaurant" style="color: #184267;"><i class="fas fa-utensils"></i> Restaurant</a></li>
+            </ul>
+          </li>
+          <!-- Local Features Dropdown -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="fas fa-leaf" style="color: #184267;"></i> Local Features <span class="caret" style="margin-left: 21%;"></span>
 
-        </ul><br>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="#section41" id="localdishes" style="color: #184267;"><i class="fas fa-utensils"></i> Local Dishes</a></li>
+              <li><a href="#section44" id="localindustries" style="color: #184267;"><i class="fas fa-industry"></i> Local Industries</a></li>
+              <li><a href="#section42" id="otop"><i class="fas fa-store" style="color: #184267;"></i> OTOP</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#section12" id="reward" >
+              <i class="fas fa-gift"style="color: #184267;"></i> Rewards
+            </a>
+          </li>
+          <li>
+            <a href="#section11" id="logout">
+              <i class="fas fa-sign-out-alt" style="color: #184267;"></i> Log out
+            </a>
+          </li>
+        </ul>
+        <br>
       </div>
+    
+    </div>
 
       <div id="logoutModal" class="modal" style="margin-left: 350px; top: -25%; ">
         <div class="modal-content" style="background-color: #337ab7; 
